SERVER-107323 Fix coverity warning in unit test (#38823)

GitOrigin-RevId: 9c65116960977d105385f97845421d46cd00aa42